1) our services texts alignment fixed 2) on tech stack gap among icons has been increased

--- a/components/OurServices/OurServices.module.css
+++ b/components/OurServices/OurServices.module.css
@@ -24,7 +24,7 @@
     width: 30%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .service_heading {
@@ -49,8 +49,8 @@
     font-weight: 200;
     line-height: 25px;
     font-family: var(--fontKanit);
-    text-align: center;
-    width: 80%;
+    text-align: left;
+    /* width: 80%; */
     font-size: 20px;
 }
 
