--- a/components/TechStack/TechStack.module.css
+++ b/components/TechStack/TechStack.module.css
@@ -50,7 +50,7 @@
     /* justify-content: space-around; */
     flex-wrap: wrap;
     width: 45%;
-    gap: 20px;
+    gap: 25px;
 }
 
 .techStack_inner img {
